Fix LoggingChangeST tests
Signed-off-by: Jakub Scholz <www@scholzj.com>