@@ -50,6 +50,7 @@ import io.strimzi.systemtest.templates.crd.KafkaTemplates;
 import io.strimzi.systemtest.templates.specific.ScraperTemplates;
 import io.strimzi.systemtest.utils.RollingUpdateUtils;
 import io.strimzi.systemtest.utils.StUtils;
+import io.strimzi.systemtest.utils.TestKafkaVersion;
 import io.strimzi.systemtest.utils.kafkaUtils.KafkaBridgeUtils;
 import io.strimzi.systemtest.utils.kafkaUtils.KafkaConnectUtils;
 import io.strimzi.systemtest.utils.kafkaUtils.KafkaConnectorUtils;
@@ -61,6 +62,7 @@ import io.strimzi.test.TestUtils;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Tag;
 
@@ -121,26 +123,93 @@ class LoggingChangeST extends AbstractST {
             @Label(value = TestDocsLabels.LOGGING)
         }
     )
+    @SuppressWarnings("checkstyle:MethodLength")
     void testJSONFormatLogging() {
         final TestStorage testStorage = new TestStorage(ResourceManager.getTestContext());
 
         // In this test scenario we change configuration for CO and we have to be sure, that CO is installed via YAML bundle instead of helm or OLM
         assumeTrue(!Environment.isHelmInstall() && !Environment.isOlmInstall());
 
-        String loggersConfigKafka = "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
-            "log4j.appender.CONSOLE.layout=net.logstash.log4j.JSONEventLayoutV1\n" +
-            "kafka.root.logger.level=INFO\n" +
-            "log4j.rootLogger=${kafka.root.logger.level}, CONSOLE\n" +
-            "log4j.logger.kafka=INFO\n" +
-            "log4j.logger.org.apache.kafka=INFO\n" +
-            "log4j.logger.kafka.request.logger=WARN, CONSOLE\n" +
-            "log4j.logger.kafka.network.Processor=OFF\n" +
-            "log4j.logger.kafka.server.KafkaApis=OFF\n" +
-            "log4j.logger.kafka.network.RequestChannel$=WARN\n" +
-            "log4j.logger.kafka.controller=TRACE\n" +
-            "log4j.logger.kafka.log.LogCleaner=INFO\n" +
-            "log4j.logger.state.change.logger=TRACE\n" +
-            "log4j.logger.kafka.authorizer.logger=INFO";
+        String loggersConfigKafka;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            loggersConfigKafka = "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
+                    "log4j.appender.CONSOLE.layout=net.logstash.log4j.JSONEventLayoutV1\n" +
+                    "kafka.root.logger.level=INFO\n" +
+                    "log4j.rootLogger=${kafka.root.logger.level}, CONSOLE\n" +
+                    "log4j.logger.kafka=INFO\n" +
+                    "log4j.logger.org.apache.kafka=INFO\n" +
+                    "log4j.logger.kafka.request.logger=WARN, CONSOLE\n" +
+                    "log4j.logger.kafka.network.Processor=OFF\n" +
+                    "log4j.logger.kafka.server.KafkaApis=OFF\n" +
+                    "log4j.logger.kafka.network.RequestChannel$=WARN\n" +
+                    "log4j.logger.kafka.controller=TRACE\n" +
+                    "log4j.logger.kafka.log.LogCleaner=INFO\n" +
+                    "log4j.logger.state.change.logger=TRACE\n" +
+                    "log4j.logger.kafka.authorizer.logger=INFO";
+        } else {
+            // Kafka 4.0
+            loggersConfigKafka = """
+                    name = KafkaConfig
+
+                    appender.console.type = Console
+                    appender.console.name = STDOUT
+                    appender.console.layout.type=JsonLayout
+                    
+                    rootLogger.level = INFO
+                    rootLogger.appenderRefs = console
+                    rootLogger.appenderRef.console.ref = STDOUT
+                    rootLogger.additivity = false
+                    
+                    logger.kafka.name = kafka
+                    logger.kafka.level = INFO
+                    logger.kafka.appenderRefs = console
+                    logger.kafka.appenderRef.console.ref = STDOUT
+                    logger.kafka.additivity = false
+                    
+                    logger.orgapachekafka.name = org.apache.kafka
+                    logger.orgapachekafka.level = INFO
+                    logger.orgapachekafka.appenderRefs = console
+                    logger.orgapachekafka.appenderRef.console.ref = STDOUT
+                    logger.orgapachekafka.additivity = false
+                    
+                    logger.requestlogger.name = kafka.request.logger
+                    logger.requestlogger.level = WARN
+                    logger.requestlogger.appenderRefs = console
+                    logger.requestlogger.appenderRef.console.ref = STDOUT
+                    logger.requestlogger.additivity = false
+                    
+                    logger.requestchannel.name = kafka.network.RequestChannel$
+                    logger.requestchannel.level = WARN
+                    logger.requestchannel.appenderRefs = console
+                    logger.requestchannel.appenderRef.console.ref = STDOUT
+                    logger.requestchannel.additivity = false
+                    
+                    logger.controller.name = org.apache.kafka.controller
+                    logger.controller.level = INFO
+                    logger.controller.appenderRefs = console
+                    logger.controller.appenderRef.console.ref = STDOUT
+                    logger.controller.additivity = false
+                    
+                    logger.logcleaner.name = kafka.log.LogCleaner
+                    logger.logcleaner.level = INFO
+                    logger.logcleaner.appenderRefs = console
+                    logger.logcleaner.appenderRef.console.ref = STDOUT
+                    logger.logcleaner.additivity = false
+                    
+                    logger.statechange.name = state.change.logger
+                    logger.statechange.level = INFO
+                    logger.statechange.appenderRefs = console
+                    logger.statechange.appenderRef.console.ref = STDOUT
+                    logger.statechange.additivity = false
+                    
+                    logger.authorizer.name = kafka.authorizer.logger
+                    logger.authorizer.level = INFO
+                    logger.authorizer.appenderRefs = console
+                    logger.authorizer.appenderRef.console.ref = STDOUT
+                    logger.authorizer.additivity = false
+                    """;
+        }
 
         String loggersConfigOperators = "appender.console.type=Console\n" +
             "appender.console.name=STDOUT\n" +
@@ -739,16 +808,24 @@ class LoggingChangeST extends AbstractST {
             @Label(value = TestDocsLabels.LOGGING)
         }
     )
+    @SuppressWarnings("checkstyle:MethodLength")
     void testDynamicallyAndNonDynamicSetConnectLoggingLevels() {
         final TestStorage testStorage = new TestStorage(ResourceManager.getTestContext());
         final Pattern log4jPatternDebugLevel = Pattern.compile("^(?<date>[\\d-]+) (?<time>[\\d:,]+) DEBUG (?<message>.+)");
         final Pattern log4jPatternInfoLevel = Pattern.compile("^(?<date>[\\d-]+) (?<time>[\\d:,]+) INFO (?<message>.+)");
 
+        final InlineLogging inlineLogging;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            inlineLogging = new InlineLoggingBuilder().withLoggers(Map.of("connect.root.logger.level", "OFF")).build();
+        } else {
+            inlineLogging = new InlineLoggingBuilder().withLoggers(Map.of("rootLogger.level", "OFF")).build();
+        }
+
         final int connectReplicas = 3;
         final KafkaConnect connect = KafkaConnectTemplates.kafkaConnect(testStorage.getNamespaceName(), testStorage.getClusterName(), connectReplicas)
             .editSpec()
-                .withLogging(new InlineLoggingBuilder()
-                    .withLoggers(Map.of("connect.root.logger.level", "OFF")).build())
+                .withLogging(inlineLogging)
             .endSpec()
             .editMetadata()
                 .addToAnnotations(Annotations.STRIMZI_IO_USE_CONNECTOR_RESOURCES, "true")
@@ -778,9 +855,17 @@ class LoggingChangeST extends AbstractST {
         connectPods.keySet().forEach(pod -> assertTrue(logsDisabled.test(pod)));
 
         LOGGER.info("Changing rootLogger level to DEBUG with inline logging");
-        final InlineLogging inlineLoggingDebugLevel = new InlineLoggingBuilder().addToLoggers("connect.root.logger.level", "DEBUG").build();
+
+        final InlineLogging inlineLoggingDebug;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            inlineLoggingDebug = new InlineLoggingBuilder().withLoggers(Map.of("connect.root.logger.level", "DEBUG")).build();
+        } else {
+            inlineLoggingDebug = new InlineLoggingBuilder().withLoggers(Map.of("rootLogger.level", "DEBUG")).build();
+        }
+
         KafkaConnectResource.replaceKafkaConnectResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), conn -> {
-            conn.getSpec().setLogging(inlineLoggingDebugLevel);
+            conn.getSpec().setLogging(inlineLoggingDebug);
         });
 
         // check if lines from Logs contain messages with log level DEBUG
@@ -790,9 +875,17 @@ class LoggingChangeST extends AbstractST {
         assertThat("Connect Pod should not roll", PodUtils.podSnapshot(testStorage.getNamespaceName(), testStorage.getKafkaConnectSelector()), equalTo(connectPods));
 
         LOGGER.info("Changing rootLogger level from DEBUG to INFO with inline logging");
-        final InlineLogging inlineLoggingInfoLevel = new InlineLoggingBuilder().addToLoggers("connect.root.logger.level", "INFO").build();
+
+        final InlineLogging inlineLoggingInfo;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            inlineLoggingInfo = new InlineLoggingBuilder().withLoggers(Map.of("connect.root.logger.level", "INFO")).build();
+        } else {
+            inlineLoggingInfo = new InlineLoggingBuilder().withLoggers(Map.of("rootLogger.level", "INFO")).build();
+        }
+
         KafkaConnectResource.replaceKafkaConnectResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), conn -> {
-            conn.getSpec().setLogging(inlineLoggingInfoLevel);
+            conn.getSpec().setLogging(inlineLoggingInfo);
         });
 
         // check if lines from Logs contain log Level INFO but no longer DEBUG
@@ -805,12 +898,34 @@ class LoggingChangeST extends AbstractST {
 
         // external logging
 
-        final String log4jConfig = """
-            log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-            log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-            log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %X{connector.context}%m (%c) [%t]%n
-            log4j.rootLogger=OFF, CONSOLE
-            log4j.logger.org.reflections=ERROR""";
+        final String log4jConfig;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            log4jConfig = """
+                    log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+                    log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+                    log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %X{connector.context}%m (%c) [%t]%n
+                    log4j.rootLogger=OFF, CONSOLE
+                    log4j.logger.org.reflections=ERROR""";
+        } else {
+            log4jConfig = """
+                    name = KafkaConnectConfig
+
+                    appender.console.type = Console
+                    appender.console.name = STDOUT
+                    appender.console.layout.type = PatternLayout
+                    appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}:%L - %m%n
+                    
+                    rootLogger.level = OFF
+                    rootLogger.appenderRefs = console
+                    rootLogger.appenderRef.console.ref = STDOUT
+                    rootLogger.additivity = false
+                    
+                    logger.reflections.name = org.reflections
+                    logger.reflections.level = ERROR
+                    logger.reflections.additivity = false
+                    """;
+        }
 
         final String externalCmName = "external-cm";
 
@@ -849,37 +964,39 @@ class LoggingChangeST extends AbstractST {
 
         assertThat("Connect Pod should not roll", PodUtils.podSnapshot(testStorage.getNamespaceName(), testStorage.getKafkaConnectSelector()), equalTo(connectPods));
 
-        // ##### 2nd phase - non-dynamic update of root logger with RollingUpdate  ####
-        connectPods = PodUtils.podSnapshot(testStorage.getNamespaceName(), testStorage.getKafkaConnectSelector());
-        final String connectDepName = KafkaConnectResources.componentName(testStorage.getClusterName());
+        // ##### 2nd phase - non-dynamic update of root logger with RollingUpdate => this is done only for KAfka 3.9 ####
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            connectPods = PodUtils.podSnapshot(testStorage.getNamespaceName(), testStorage.getKafkaConnectSelector());
+            final String connectDepName = KafkaConnectResources.componentName(testStorage.getClusterName());
 
-        // set use connector resource to false
-        KafkaConnectResource.replaceKafkaConnectResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), kC -> {
-            final Map<String, String> annotations = kC.getMetadata().getAnnotations();
+            // set use connector resource to false
+            KafkaConnectResource.replaceKafkaConnectResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), kC -> {
+                final Map<String, String> annotations = kC.getMetadata().getAnnotations();
 
-            annotations.put(Annotations.STRIMZI_IO_USE_CONNECTOR_RESOURCES, "false");
+                annotations.put(Annotations.STRIMZI_IO_USE_CONNECTOR_RESOURCES, "false");
 
-            kC.getMetadata().setAnnotations(annotations);
-        });
-
-        // KafkaConnect should roll because of change in annotation
-        StUtils.waitTillStrimziPodSetOrDeploymentRolled(testStorage.getNamespaceName(), connectDepName, connectReplicas, connectPods, testStorage.getKafkaConnectSelector());
-
-        connectPods = PodUtils.podSnapshot(testStorage.getNamespaceName(), testStorage.getKafkaConnectSelector());
-
-        LOGGER.info("Changing rootLogger level from INFO to DEBUG with inline logging");
-        StUtils.waitUntilSupplierIsSatisfied("Changing rootLogger level from INFO to DEBUG with inline logging",
-            () -> {
-                KafkaConnectResource.replaceKafkaConnectResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(),
-                    kC -> kC.getSpec().setLogging(inlineLoggingDebugLevel));
-                return true;
+                kC.getMetadata().setAnnotations(annotations);
             });
-        // KafkaConnect should roll because of rootLogger level change with STRIMZI_IO_USE_CONNECTOR_RESOURCES set to `false`
-        StUtils.waitTillStrimziPodSetOrDeploymentRolled(testStorage.getNamespaceName(), connectDepName, connectReplicas, connectPods, testStorage.getKafkaConnectSelector());
 
-        // check if lines from Logs contain messages with log level DEBUG
-        hasLogLevelDebug = connectLogs -> connectLogs != null && !connectLogs.isEmpty() && log4jPatternDebugLevel.matcher(connectLogs).find();
-        KafkaConnectUtils.waitForConnectLogLevelChangePropagation(testStorage, connectPods, scraperPodName, hasLogLevelDebug, "DEBUG");
+            // KafkaConnect should roll because of change in annotation
+            StUtils.waitTillStrimziPodSetOrDeploymentRolled(testStorage.getNamespaceName(), connectDepName, connectReplicas, connectPods, testStorage.getKafkaConnectSelector());
+
+            connectPods = PodUtils.podSnapshot(testStorage.getNamespaceName(), testStorage.getKafkaConnectSelector());
+
+            LOGGER.info("Changing rootLogger level from INFO to DEBUG with inline logging");
+            StUtils.waitUntilSupplierIsSatisfied("Changing rootLogger level from INFO to DEBUG with inline logging",
+                    () -> {
+                        KafkaConnectResource.replaceKafkaConnectResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(),
+                                kC -> kC.getSpec().setLogging(inlineLoggingDebug));
+                        return true;
+                    });
+            // KafkaConnect should roll because of rootLogger level change with STRIMZI_IO_USE_CONNECTOR_RESOURCES set to `false`
+            StUtils.waitTillStrimziPodSetOrDeploymentRolled(testStorage.getNamespaceName(), connectDepName, connectReplicas, connectPods, testStorage.getKafkaConnectSelector());
+
+            // check if lines from Logs contain messages with log level DEBUG
+            hasLogLevelDebug = connectLogs -> connectLogs != null && !connectLogs.isEmpty() && log4jPatternDebugLevel.matcher(connectLogs).find();
+            KafkaConnectUtils.waitForConnectLogLevelChangePropagation(testStorage, connectPods, scraperPodName, hasLogLevelDebug, "DEBUG");
+        }
     }
 
     @ParallelNamespaceTest
@@ -900,24 +1017,41 @@ class LoggingChangeST extends AbstractST {
             @Label(value = TestDocsLabels.LOGGING)
         }
     )
+    @SuppressWarnings("checkstyle:MethodLength")
     void testDynamicallySetKafkaLoggingLevels() {
         final TestStorage testStorage = new TestStorage(ResourceManager.getTestContext());
 
-        InlineLogging ilOff = new InlineLogging();
-        Map<String, String> log4jConfig = new HashMap<>();
-        log4jConfig.put("kafka.root.logger.level", "OFF");
-        log4jConfig.put("log4j.logger.kafka", "OFF");
-        log4jConfig.put("log4j.logger.org.apache.kafka", "OFF");
-        log4jConfig.put("log4j.logger.kafka.request.logger", "OFF, CONSOLE");
-        log4jConfig.put("log4j.logger.kafka.network.Processor", "OFF");
-        log4jConfig.put("log4j.logger.kafka.server.KafkaApis", "OFF");
-        log4jConfig.put("log4j.logger.kafka.network.RequestChannel$", "OFF");
-        log4jConfig.put("log4j.logger.kafka.controller", "OFF");
-        log4jConfig.put("log4j.logger.kafka.log.LogCleaner", "OFF");
-        log4jConfig.put("log4j.logger.state.change.logger", "OFF");
-        log4jConfig.put("log4j.logger.kafka.authorizer.logger", "OFF");
+        final InlineLogging inlineLogging;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            Map<String, String> log4jConfig = new HashMap<>();
+            log4jConfig.put("kafka.root.logger.level", "OFF");
+            log4jConfig.put("log4j.logger.kafka", "OFF");
+            log4jConfig.put("log4j.logger.org.apache.kafka", "OFF");
+            log4jConfig.put("log4j.logger.kafka.request.logger", "OFF, CONSOLE");
+            log4jConfig.put("log4j.logger.kafka.network.Processor", "OFF");
+            log4jConfig.put("log4j.logger.kafka.server.KafkaApis", "OFF");
+            log4jConfig.put("log4j.logger.kafka.network.RequestChannel$", "OFF");
+            log4jConfig.put("log4j.logger.kafka.controller", "OFF");
+            log4jConfig.put("log4j.logger.kafka.log.LogCleaner", "OFF");
+            log4jConfig.put("log4j.logger.state.change.logger", "OFF");
+            log4jConfig.put("log4j.logger.kafka.authorizer.logger", "OFF");
 
-        ilOff.setLoggers(log4jConfig);
+            inlineLogging = new InlineLoggingBuilder().withLoggers(log4jConfig).build();
+        } else {
+            Map<String, String> log4j2Config = new HashMap<>();
+            log4j2Config.put("rootLogger.leve", "OFF");
+            log4j2Config.put("logger.kafka.level", "OFF");
+            log4j2Config.put("logger.orgapachekafka.level", "OFF");
+            log4j2Config.put("logger.requestlogger.level", "OFF");
+            log4j2Config.put("logger.requestchannel.level", "OFF");
+            log4j2Config.put("logger.controller.level", "OFF");
+            log4j2Config.put("logger.logcleaner.level", "OFF");
+            log4j2Config.put("logger.statechange.level", "OFF");
+            log4j2Config.put("logger.authorizer.level", "OFF");
+
+            inlineLogging = new InlineLoggingBuilder().withLoggers(log4j2Config).build();
+        }
 
         resourceManager.createResourceWithWait(
             KafkaNodePoolTemplates.brokerPool(testStorage.getNamespaceName(), testStorage.getBrokerPoolName(), testStorage.getClusterName(), 3).build(),
@@ -927,7 +1061,7 @@ class LoggingChangeST extends AbstractST {
             KafkaTemplates.kafka(testStorage.getNamespaceName(), testStorage.getClusterName(), 3)
                 .editSpec()
                     .editKafka()
-                        .withLogging(ilOff)
+                        .withLogging(inlineLogging)
                     .endKafka()
                 .endSpec()
                 .build(),
@@ -939,7 +1073,7 @@ class LoggingChangeST extends AbstractST {
         String scraperPodName = kubeClient().listPodsByPrefixInName(testStorage.getNamespaceName(), testStorage.getScraperName()).get(0).getMetadata().getName();
         Map<String, String> brokerPods = PodUtils.podSnapshot(testStorage.getNamespaceName(), testStorage.getBrokerSelector());
 
-        TestUtils.waitFor("log to not be empty", Duration.ofMillis(100).toMillis(), TestConstants.SAFETY_RECONCILIATION_INTERVAL,
+        TestUtils.waitFor("log to be empty", Duration.ofMillis(100).toMillis(), TestConstants.SAFETY_RECONCILIATION_INTERVAL,
             () -> {
                 boolean[] correctLogging = {true};
 
@@ -952,10 +1086,18 @@ class LoggingChangeST extends AbstractST {
             });
 
         LOGGER.info("Changing rootLogger level to DEBUG with inline logging");
-        InlineLogging ilDebug = new InlineLogging();
-        ilDebug.setLoggers(Collections.singletonMap("kafka.root.logger.level", "DEBUG"));
+
+        final InlineLogging inlineLoggingDebug;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            inlineLoggingDebug = new InlineLoggingBuilder().withLoggers(Map.of("kafka.root.logger.level", "DEBUG")).build();
+        } else {
+            // Kafka 4.0
+            inlineLoggingDebug = new InlineLoggingBuilder().withLoggers(Map.of("rootLogger.level", "DEBUG")).build();
+        }
+
         KafkaResource.replaceKafkaResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), k -> {
-            k.getSpec().getKafka().setLogging(ilDebug);
+            k.getSpec().getKafka().setLogging(inlineLoggingDebug);
         });
 
         LOGGER.info("Waiting for dynamic change in the Kafka Pod");
@@ -975,25 +1117,94 @@ class LoggingChangeST extends AbstractST {
             });
 
         LOGGER.info("Setting external logging INFO");
+
+        final String externalLogging;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            externalLogging = "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
+                    "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
+                    "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
+                    "log4j.rootLogger=INFO, CONSOLE\n" +
+                    "log4j.logger.kafka=INFO\n" +
+                    "log4j.logger.org.apache.kafka=INFO\n" +
+                    "log4j.logger.kafka.request.logger=WARN\n" +
+                    "log4j.logger.kafka.network.Processor=ERROR\n" +
+                    "log4j.logger.kafka.server.KafkaApis=ERROR\n" +
+                    "log4j.logger.kafka.network.RequestChannel$=WARN\n" +
+                    "log4j.logger.kafka.controller=TRACE\n" +
+                    "log4j.logger.kafka.log.LogCleaner=INFO\n" +
+                    "log4j.logger.state.change.logger=TRACE\n" +
+                    "log4j.logger.kafka.authorizer.logger=INFO";
+        } else {
+            externalLogging = """
+                    name = KafkaConfig
+                    
+                    appender.console.type = Console
+                    appender.console.name = STDOUT
+                    appender.console.layout.type = PatternLayout
+                    appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}:%L - %m%n
+                    
+                    rootLogger.level = INFO
+                    rootLogger.appenderRefs = console
+                    rootLogger.appenderRef.console.ref = STDOUT
+                    rootLogger.additivity = false
+                    
+                    logger.kafka.name = kafka
+                    logger.kafka.level = INFO
+                    logger.kafka.appenderRefs = console
+                    logger.kafka.appenderRef.console.ref = STDOUT
+                    logger.kafka.additivity = false
+                    
+                    logger.orgapachekafka.name = org.apache.kafka
+                    logger.orgapachekafka.level = INFO
+                    logger.orgapachekafka.appenderRefs = console
+                    logger.orgapachekafka.appenderRef.console.ref = STDOUT
+                    logger.orgapachekafka.additivity = false
+                    
+                    logger.requestlogger.name = kafka.request.logger
+                    logger.requestlogger.level = WARN
+                    logger.requestlogger.appenderRefs = console
+                    logger.requestlogger.appenderRef.console.ref = STDOUT
+                    logger.requestlogger.additivity = false
+                    
+                    logger.requestchannel.name = kafka.network.RequestChannel$
+                    logger.requestchannel.level = WARN
+                    logger.requestchannel.appenderRefs = console
+                    logger.requestchannel.appenderRef.console.ref = STDOUT
+                    logger.requestchannel.additivity = false
+                    
+                    logger.controller.name = org.apache.kafka.controller
+                    logger.controller.level = INFO
+                    logger.controller.appenderRefs = console
+                    logger.controller.appenderRef.console.ref = STDOUT
+                    logger.controller.additivity = false
+                    
+                    logger.logcleaner.name = kafka.log.LogCleaner
+                    logger.logcleaner.level = INFO
+                    logger.logcleaner.appenderRefs = console
+                    logger.logcleaner.appenderRef.console.ref = STDOUT
+                    logger.logcleaner.additivity = false
+                    
+                    logger.statechange.name = state.change.logger
+                    logger.statechange.level = INFO
+                    logger.statechange.appenderRefs = console
+                    logger.statechange.appenderRef.console.ref = STDOUT
+                    logger.statechange.additivity = false
+                    
+                    logger.authorizer.name = kafka.authorizer.logger
+                    logger.authorizer.level = INFO
+                    logger.authorizer.appenderRefs = console
+                    logger.authorizer.appenderRef.console.ref = STDOUT
+                    logger.authorizer.additivity = false
+                    """;
+        }
+
         ConfigMap configMap = new ConfigMapBuilder()
             .withNewMetadata()
               .withName("external-configmap")
               .withNamespace(testStorage.getNamespaceName())
             .endMetadata()
-            .withData(Collections.singletonMap("log4j.properties", "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
-                "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
-                "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
-                "log4j.rootLogger=INFO, CONSOLE\n" +
-                "log4j.logger.kafka=INFO\n" +
-                "log4j.logger.org.apache.kafka=INFO\n" +
-                "log4j.logger.kafka.request.logger=WARN\n" +
-                "log4j.logger.kafka.network.Processor=ERROR\n" +
-                "log4j.logger.kafka.server.KafkaApis=ERROR\n" +
-                "log4j.logger.kafka.network.RequestChannel$=WARN\n" +
-                "log4j.logger.kafka.controller=TRACE\n" +
-                "log4j.logger.kafka.log.LogCleaner=INFO\n" +
-                "log4j.logger.state.change.logger=TRACE\n" +
-                "log4j.logger.kafka.authorizer.logger=INFO"))
+            .withData(Collections.singletonMap("log4j.properties", externalLogging))
             .build();
 
         kubeClient().createConfigMapInNamespace(testStorage.getNamespaceName(), configMap);
@@ -1066,14 +1277,24 @@ class LoggingChangeST extends AbstractST {
         String scraperPodName = kubeClient().listPodsByPrefixInName(testStorage.getNamespaceName(), testStorage.getScraperName()).get(0).getMetadata().getName();
         Map<String, String> brokerPods = PodUtils.podSnapshot(testStorage.getNamespaceName(), testStorage.getBrokerSelector());
 
-        InlineLogging il = new InlineLogging();
-        il.setLoggers(Collections.singletonMap("log4j.logger.paprika", "INFO"));
+        final InlineLogging inlineLogging;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            inlineLogging = new InlineLoggingBuilder().withLoggers(Map.of("log4j.logger.paprika", "INFO")).build();
+        } else {
+            // Kafka 4.0
+            inlineLogging = new InlineLoggingBuilder().withLoggers(Map.of("logger.paprika.name", "paprika", "logger.paprika.level", "INFO")).build();
+        }
 
         KafkaResource.replaceKafkaResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), k -> {
-            k.getSpec().getKafka().setLogging(il);
+            k.getSpec().getKafka().setLogging(inlineLogging);
         });
 
-        RollingUpdateUtils.waitTillComponentHasRolled(testStorage.getNamespaceName(), testStorage.getBrokerSelector(), brokerPods);
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9 -> rolling update is expected only with Kafka 3.9
+            RollingUpdateUtils.waitTillComponentHasRolled(testStorage.getNamespaceName(), testStorage.getBrokerSelector(), brokerPods);
+        }
+
         TestUtils.waitFor("Logger change", TestConstants.GLOBAL_POLL_INTERVAL, TestConstants.GLOBAL_TIMEOUT,
             () -> KafkaCmdClient.describeKafkaBrokerLoggersUsingPodCli(testStorage.getNamespaceName(), scraperPodName, KafkaResources.plainBootstrapAddress(testStorage.getClusterName()), podNum).contains("paprika=INFO"));
     }
@@ -1103,11 +1324,17 @@ class LoggingChangeST extends AbstractST {
 
         Map<String, String> brokerPods = PodUtils.podSnapshot(testStorage.getNamespaceName(), testStorage.getBrokerSelector());
 
-        InlineLogging il = new InlineLogging();
-        il.setLoggers(Collections.singletonMap("kafka.root.logger.level", "PAPRIKA"));
+        final InlineLogging inlineLogging;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            inlineLogging = new InlineLoggingBuilder().withLoggers(Map.of("kafka.root.logger.level", "PAPRIKA")).build();
+        } else {
+            // Kafka 4.0
+            inlineLogging = new InlineLoggingBuilder().withLoggers(Map.of("rootLogger.level", "PAPRIKA")).build();
+        }
 
         KafkaResource.replaceKafkaResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), k -> {
-            k.getSpec().getKafka().setLogging(il);
+            k.getSpec().getKafka().setLogging(inlineLogging);
         });
 
         RollingUpdateUtils.waitForNoRollingUpdate(testStorage.getNamespaceName(), testStorage.getBrokerSelector(), brokerPods);
@@ -1130,31 +1357,97 @@ class LoggingChangeST extends AbstractST {
             @Label(value = TestDocsLabels.LOGGING)
         }
     )
+    @SuppressWarnings("checkstyle:MethodLength")
     void testDynamicallySetKafkaExternalLogging() {
         final TestStorage testStorage = new TestStorage(ResourceManager.getTestContext());
 
-        // this test changes dynamically unchangeable logging config and thus RU is expected
+        String externalLogging;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            externalLogging = "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
+                    "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
+                    "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
+                    "log4j.rootLogger=INFO, CONSOLE\n" +
+                    "log4j.logger.kafka=INFO\n" +
+                    "log4j.logger.org.apache.kafka=INFO\n" +
+                    "log4j.logger.kafka.request.logger=WARN\n" +
+                    "log4j.logger.kafka.network.Processor=ERROR\n" +
+                    "log4j.logger.kafka.server.KafkaApis=ERROR\n" +
+                    "log4j.logger.kafka.network.RequestChannel$=WARN\n" +
+                    "log4j.logger.kafka.controller=TRACE\n" +
+                    "log4j.logger.kafka.log.LogCleaner=INFO\n" +
+                    "log4j.logger.state.change.logger=TRACE\n" +
+                    "log4j.logger.kafka.authorizer.logger=INFO";
+        } else {
+            externalLogging = """
+                    name = KafkaConfig
+                    
+                    appender.console.type = Console
+                    appender.console.name = STDOUT
+                    appender.console.layout.type = PatternLayout
+                    appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}:%L - %m%n
+                    
+                    rootLogger.level = INFO
+                    rootLogger.appenderRefs = console
+                    rootLogger.appenderRef.console.ref = STDOUT
+                    rootLogger.additivity = false
+                    
+                    logger.kafka.name = kafka
+                    logger.kafka.level = INFO
+                    logger.kafka.appenderRefs = console
+                    logger.kafka.appenderRef.console.ref = STDOUT
+                    logger.kafka.additivity = false
+                    
+                    logger.orgapachekafka.name = org.apache.kafka
+                    logger.orgapachekafka.level = INFO
+                    logger.orgapachekafka.appenderRefs = console
+                    logger.orgapachekafka.appenderRef.console.ref = STDOUT
+                    logger.orgapachekafka.additivity = false
+                    
+                    logger.requestlogger.name = kafka.request.logger
+                    logger.requestlogger.level = WARN
+                    logger.requestlogger.appenderRefs = console
+                    logger.requestlogger.appenderRef.console.ref = STDOUT
+                    logger.requestlogger.additivity = false
+                    
+                    logger.requestchannel.name = kafka.network.RequestChannel$
+                    logger.requestchannel.level = WARN
+                    logger.requestchannel.appenderRefs = console
+                    logger.requestchannel.appenderRef.console.ref = STDOUT
+                    logger.requestchannel.additivity = false
+                    
+                    logger.controller.name = org.apache.kafka.controller
+                    logger.controller.level = INFO
+                    logger.controller.appenderRefs = console
+                    logger.controller.appenderRef.console.ref = STDOUT
+                    logger.controller.additivity = false
+                    
+                    logger.logcleaner.name = kafka.log.LogCleaner
+                    logger.logcleaner.level = INFO
+                    logger.logcleaner.appenderRefs = console
+                    logger.logcleaner.appenderRef.console.ref = STDOUT
+                    logger.logcleaner.additivity = false
+                    
+                    logger.statechange.name = state.change.logger
+                    logger.statechange.level = INFO
+                    logger.statechange.appenderRefs = console
+                    logger.statechange.appenderRef.console.ref = STDOUT
+                    logger.statechange.additivity = false
+                    
+                    logger.authorizer.name = kafka.authorizer.logger
+                    logger.authorizer.level = INFO
+                    logger.authorizer.appenderRefs = console
+                    logger.authorizer.appenderRef.console.ref = STDOUT
+                    logger.authorizer.additivity = false
+                    """;
+        }
+
         ConfigMap configMap = new ConfigMapBuilder()
                 .withNewMetadata()
                 .withName("external-cm")
                 .withNamespace(testStorage.getNamespaceName())
                 .endMetadata()
-                .withData(Collections.singletonMap("log4j.properties", "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
-                        "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
-                        "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
-                        "log4j.rootLogger=INFO, CONSOLE\n" +
-                        "log4j.logger.kafka=INFO\n" +
-                        "log4j.logger.org.apache.kafka=INFO\n" +
-                        "log4j.logger.kafka.request.logger=WARN\n" +
-                        "log4j.logger.kafka.network.Processor=ERROR\n" +
-                        "log4j.logger.kafka.server.KafkaApis=ERROR\n" +
-                        "log4j.logger.kafka.network.RequestChannel$=WARN\n" +
-                        "log4j.logger.kafka.controller=TRACE\n" +
-                        "log4j.logger.kafka.log.LogCleaner=INFO\n" +
-                        "log4j.logger.state.change.logger=TRACE\n" +
-                        "log4j.logger.kafka.authorizer.logger=${kafka.my.level.string}\n" +
-                        "kafka.my.level.string=INFO"
-                        ))
+                .withData(Collections.singletonMap("log4j.properties", externalLogging))
                 .build();
 
         kubeClient().createConfigMapInNamespace(testStorage.getNamespaceName(), configMap);
@@ -1190,27 +1483,93 @@ class LoggingChangeST extends AbstractST {
         String scraperPodName = kubeClient().listPodsByPrefixInName(testStorage.getNamespaceName(), testStorage.getScraperName()).get(0).getMetadata().getName();
         Map<String, String> brokerPods = PodUtils.podSnapshot(testStorage.getNamespaceName(), testStorage.getBrokerSelector());
 
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            externalLogging = "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
+                    "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
+                    "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
+                    "log4j.rootLogger=INFO, CONSOLE\n" +
+                    "log4j.logger.kafka=ERROR\n" +
+                    "log4j.logger.org.apache.kafka=ERROR\n" +
+                    "log4j.logger.kafka.request.logger=WARN\n" +
+                    "log4j.logger.kafka.network.Processor=ERROR\n" +
+                    "log4j.logger.kafka.server.KafkaApis=ERROR\n" +
+                    "log4j.logger.kafka.network.RequestChannel$=WARN\n" +
+                    "log4j.logger.kafka.controller=TRACE\n" +
+                    "log4j.logger.kafka.log.LogCleaner=ERROR\n" +
+                    "log4j.logger.state.change.logger=TRACE\n" +
+                    "log4j.logger.kafka.authorizer.logger=${kafka.my.level.string}\n" +
+                    "kafka.my.level.string=ERROR";
+        } else {
+            externalLogging = """
+                    name = KafkaConfig
+                    
+                    appender.console.type = Console
+                    appender.console.name = STDOUT
+                    appender.console.layout.type = PatternLayout
+                    appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}:%L - %m%n
+                    
+                    rootLogger.level = ERROR
+                    rootLogger.appenderRefs = console
+                    rootLogger.appenderRef.console.ref = STDOUT
+                    rootLogger.additivity = false
+                    
+                    logger.kafka.name = kafka
+                    logger.kafka.level = ERROR
+                    logger.kafka.appenderRefs = console
+                    logger.kafka.appenderRef.console.ref = STDOUT
+                    logger.kafka.additivity = false
+                    
+                    logger.orgapachekafka.name = org.apache.kafka
+                    logger.orgapachekafka.level = ERROR
+                    logger.orgapachekafka.appenderRefs = console
+                    logger.orgapachekafka.appenderRef.console.ref = STDOUT
+                    logger.orgapachekafka.additivity = false
+                    
+                    logger.requestlogger.name = kafka.request.logger
+                    logger.requestlogger.level = WARN
+                    logger.requestlogger.appenderRefs = console
+                    logger.requestlogger.appenderRef.console.ref = STDOUT
+                    logger.requestlogger.additivity = false
+                    
+                    logger.requestchannel.name = kafka.network.RequestChannel$
+                    logger.requestchannel.level = WARN
+                    logger.requestchannel.appenderRefs = console
+                    logger.requestchannel.appenderRef.console.ref = STDOUT
+                    logger.requestchannel.additivity = false
+                    
+                    logger.controller.name = org.apache.kafka.controller
+                    logger.controller.level = ERROR
+                    logger.controller.appenderRefs = console
+                    logger.controller.appenderRef.console.ref = STDOUT
+                    logger.controller.additivity = false
+                    
+                    logger.logcleaner.name = kafka.log.LogCleaner
+                    logger.logcleaner.level = ERROR
+                    logger.logcleaner.appenderRefs = console
+                    logger.logcleaner.appenderRef.console.ref = STDOUT
+                    logger.logcleaner.additivity = false
+                    
+                    logger.statechange.name = state.change.logger
+                    logger.statechange.level = ERROR
+                    logger.statechange.appenderRefs = console
+                    logger.statechange.appenderRef.console.ref = STDOUT
+                    logger.statechange.additivity = false
+                    
+                    logger.authorizer.name = kafka.authorizer.logger
+                    logger.authorizer.level = ERROR
+                    logger.authorizer.appenderRefs = console
+                    logger.authorizer.appenderRef.console.ref = STDOUT
+                    logger.authorizer.additivity = false
+                    """;
+        }
+
         configMap = new ConfigMapBuilder()
                 .withNewMetadata()
                 .withName("external-cm")
                 .withNamespace(testStorage.getNamespaceName())
                 .endMetadata()
-                .withData(Collections.singletonMap("log4j.properties", "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
-                        "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
-                        "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
-                        "log4j.rootLogger=INFO, CONSOLE\n" +
-                        "log4j.logger.kafka=ERROR\n" +
-                        "log4j.logger.org.apache.kafka=ERROR\n" +
-                        "log4j.logger.kafka.request.logger=WARN\n" +
-                        "log4j.logger.kafka.network.Processor=ERROR\n" +
-                        "log4j.logger.kafka.server.KafkaApis=ERROR\n" +
-                        "log4j.logger.kafka.network.RequestChannel$=ERROR\n" +
-                        "log4j.logger.kafka.controller=ERROR\n" +
-                        "log4j.logger.kafka.log.LogCleaner=ERROR\n" +
-                        "log4j.logger.state.change.logger=TRACE\n" +
-                        "log4j.logger.kafka.authorizer.logger=${kafka.my.level.string}\n" +
-                        "kafka.my.level.string=ERROR"
-                        ))
+                .withData(Collections.singletonMap("log4j.properties", externalLogging))
                 .build();
 
         kubeClient().updateConfigMapInNamespace(testStorage.getNamespaceName(), configMap);
@@ -1219,35 +1578,38 @@ class LoggingChangeST extends AbstractST {
         TestUtils.waitFor("Verify logger change", TestConstants.GLOBAL_POLL_INTERVAL, TestConstants.GLOBAL_TIMEOUT,
             () -> KafkaCmdClient.describeKafkaBrokerLoggersUsingPodCli(testStorage.getNamespaceName(), scraperPodName, KafkaResources.plainBootstrapAddress(testStorage.getClusterName()), podNum).contains("kafka.authorizer.logger=ERROR"));
 
-        // log4j.appender.CONSOLE.layout.ConversionPattern is changed and thus we need RU
-        configMap = new ConfigMapBuilder()
-                .withNewMetadata()
-                .withName("external-cm")
-                .withNamespace(testStorage.getNamespaceName())
-                .endMetadata()
-                .withData(Collections.singletonMap("log4j.properties", "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
-                        "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
-                        "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]\n" +
-                        "log4j.rootLogger=INFO, CONSOLE\n" +
-                        "log4j.logger.kafka=ERROR\n" +
-                        "log4j.logger.org.apache.kafka=ERROR\n" +
-                        "log4j.logger.kafka.request.logger=WARN\n" +
-                        "log4j.logger.kafka.network.Processor=ERROR\n" +
-                        "log4j.logger.kafka.server.KafkaApis=ERROR\n" +
-                        "log4j.logger.kafka.network.RequestChannel$=ERROR\n" +
-                        "log4j.logger.kafka.controller=ERROR\n" +
-                        "log4j.logger.kafka.log.LogCleaner=ERROR\n" +
-                        "log4j.logger.state.change.logger=TRACE\n" +
-                        "log4j.logger.kafka.authorizer.logger=${kafka.my.level.string}\n" +
-                        "kafka.my.level.string=DEBUG"
-                ))
-                .build();
+        // The Rolling update at conversion pattern change is expected only on Kafka 3.9 / Log4j1
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // log4j.appender.CONSOLE.layout.ConversionPattern is changed and thus we need RU
+            configMap = new ConfigMapBuilder()
+                    .withNewMetadata()
+                    .withName("external-cm")
+                    .withNamespace(testStorage.getNamespaceName())
+                    .endMetadata()
+                    .withData(Collections.singletonMap("log4j.properties", "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
+                            "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
+                            "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]\n" +
+                            "log4j.rootLogger=INFO, CONSOLE\n" +
+                            "log4j.logger.kafka=ERROR\n" +
+                            "log4j.logger.org.apache.kafka=ERROR\n" +
+                            "log4j.logger.kafka.request.logger=WARN\n" +
+                            "log4j.logger.kafka.network.Processor=ERROR\n" +
+                            "log4j.logger.kafka.server.KafkaApis=ERROR\n" +
+                            "log4j.logger.kafka.network.RequestChannel$=ERROR\n" +
+                            "log4j.logger.kafka.controller=ERROR\n" +
+                            "log4j.logger.kafka.log.LogCleaner=ERROR\n" +
+                            "log4j.logger.state.change.logger=TRACE\n" +
+                            "log4j.logger.kafka.authorizer.logger=${kafka.my.level.string}\n" +
+                            "kafka.my.level.string=DEBUG"
+                    ))
+                    .build();
 
-        kubeClient().updateConfigMapInNamespace(testStorage.getNamespaceName(), configMap);
-        RollingUpdateUtils.waitTillComponentHasRolled(testStorage.getNamespaceName(), testStorage.getBrokerSelector(), brokerPods);
+            kubeClient().updateConfigMapInNamespace(testStorage.getNamespaceName(), configMap);
+            RollingUpdateUtils.waitTillComponentHasRolled(testStorage.getNamespaceName(), testStorage.getBrokerSelector(), brokerPods);
 
-        TestUtils.waitFor("Verify logger change", TestConstants.GLOBAL_POLL_INTERVAL, TestConstants.GLOBAL_TIMEOUT,
-            () -> KafkaCmdClient.describeKafkaBrokerLoggersUsingPodCli(testStorage.getNamespaceName(), scraperPodName, KafkaResources.plainBootstrapAddress(testStorage.getClusterName()), podNum).contains("kafka.authorizer.logger=DEBUG"));
+            TestUtils.waitFor("Verify logger change", TestConstants.GLOBAL_POLL_INTERVAL, TestConstants.GLOBAL_TIMEOUT,
+                    () -> KafkaCmdClient.describeKafkaBrokerLoggersUsingPodCli(testStorage.getNamespaceName(), scraperPodName, KafkaResources.plainBootstrapAddress(testStorage.getClusterName()), podNum).contains("kafka.authorizer.logger=DEBUG"));
+        }
     }
 
     @ParallelNamespaceTest
@@ -1273,12 +1635,14 @@ class LoggingChangeST extends AbstractST {
     void testDynamicallySetMM2LoggingLevels() {
         final TestStorage testStorage = new TestStorage(ResourceManager.getTestContext());
 
-        InlineLogging ilOff = new InlineLogging();
-        Map<String, String> loggers = new HashMap<>();
-        loggers.put("connect.root.logger.level", "OFF");
-        loggers.put("log4j.logger.org.reflections", "OFF");
-
-        ilOff.setLoggers(loggers);
+        final InlineLogging inlineLoggingOff;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            inlineLoggingOff = new InlineLoggingBuilder().withLoggers(Map.of("connect.root.logger.level", "OFF", "log4j.logger.org.reflections", "OFF")).build();
+        } else {
+            // Kafka 4.0
+            inlineLoggingOff = new InlineLoggingBuilder().withLoggers(Map.of("rootLogger.level", "OFF", "logger.reflections.level", "OFF")).build();
+        }
 
         resourceManager.createResourceWithWait(
             KafkaNodePoolTemplates.brokerPoolPersistentStorage(testStorage.getNamespaceName(), testStorage.getSourceBrokerPoolName(), testStorage.getSourceClusterName(), 1).build(),
@@ -1295,7 +1659,7 @@ class LoggingChangeST extends AbstractST {
         resourceManager.createResourceWithWait(
             KafkaMirrorMaker2Templates.kafkaMirrorMaker2(testStorage.getNamespaceName(), testStorage.getClusterName(), testStorage.getSourceClusterName(), testStorage.getTargetClusterName(), 1, false)
                 .editOrNewSpec()
-                    .withLogging(ilOff)
+                    .withLogging(inlineLoggingOff)
                 .endSpec()
                 .build());
 
@@ -1311,12 +1675,18 @@ class LoggingChangeST extends AbstractST {
             });
 
         LOGGER.info("Changing rootLogger level to DEBUG with inline logging");
-        InlineLogging ilDebug = new InlineLogging();
-        loggers.put("connect.root.logger.level", "DEBUG");
-        ilDebug.setLoggers(loggers);
+
+        final InlineLogging inlineLoggingDebug;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            inlineLoggingDebug = new InlineLoggingBuilder().withLoggers(Map.of("connect.root.logger.level", "DEBUG")).build();
+        } else {
+            // Kafka 4.0
+            inlineLoggingDebug = new InlineLoggingBuilder().withLoggers(Map.of("rootLogger.level", "DEBUG")).build();
+        }
 
         KafkaMirrorMaker2Resource.replaceKafkaMirrorMaker2ResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(),
-            mm2 -> mm2.getSpec().setLogging(ilDebug)
+            mm2 -> mm2.getSpec().setLogging(inlineLoggingDebug)
         );
 
         LOGGER.info("Waiting for log4j.properties will contain desired settings");
@@ -1330,12 +1700,34 @@ class LoggingChangeST extends AbstractST {
                 return mmLog != null && !mmLog.isEmpty() && DEFAULT_LOG4J_PATTERN.matcher(mmLog).find();
             });
 
-        String log4jConfig =
-                "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
-                        "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
-                        "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %X{connector.context}%m (%c) [%t]%n\n" +
-                        "log4j.rootLogger=OFF, CONSOLE\n" +
-                        "log4j.logger.org.reflections=ERROR";
+        final String log4jConfig;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            log4jConfig = """
+                    log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+                    log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+                    log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %X{connector.context}%m (%c) [%t]%n
+                    log4j.rootLogger=OFF, CONSOLE
+                    log4j.logger.org.reflections=ERROR""";
+        } else {
+            log4jConfig = """
+                    name = KafkaMirrorMaker2Config
+
+                    appender.console.type = Console
+                    appender.console.name = STDOUT
+                    appender.console.layout.type = PatternLayout
+                    appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}:%L - %m%n
+                    
+                    rootLogger.level = OFF
+                    rootLogger.appenderRefs = console
+                    rootLogger.appenderRef.console.ref = STDOUT
+                    rootLogger.additivity = false
+                    
+                    logger.reflections.name = org.reflections
+                    logger.reflections.level = ERROR
+                    logger.reflections.additivity = false
+                    """;
+        }
 
         String externalCmName = "external-cm";
 
@@ -1413,15 +1805,45 @@ class LoggingChangeST extends AbstractST {
         );
         resourceManager.createResourceWithWait(KafkaTemplates.kafka(testStorage.getNamespaceName(), testStorage.getTargetClusterName(), 1).build());
 
-        String log4jConfig =
-                "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
-                        "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
-                        "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
-                        "log4j.rootLogger=OFF, CONSOLE\n" +
-                        "log4j.logger.org.eclipse.jetty.util.thread=FATAL\n" +
-                        "log4j.logger.org.apache.kafka.connect.runtime.WorkerTask=OFF\n" +
-                        "log4j.logger.org.eclipse.jetty.util.thread.strategy.EatWhatYouKill=OFF\n" +
-                        "log4j.logger.org.reflections=ERROR";
+        String log4jConfig;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            log4jConfig = "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
+                    "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
+                    "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
+                    "log4j.rootLogger=OFF, CONSOLE\n" +
+                    "log4j.logger.org.eclipse.jetty.util.thread=FATAL\n" +
+                    "log4j.logger.org.apache.kafka.connect.runtime.WorkerTask=OFF\n" +
+                    "log4j.logger.org.eclipse.jetty.util.thread.strategy.EatWhatYouKill=OFF\n" +
+                    "log4j.logger.org.reflections=ERROR";
+        } else {
+            log4jConfig = """
+                    name = KafkaMirrorMaker2Config
+
+                    appender.console.type = Console
+                    appender.console.name = STDOUT
+                    appender.console.layout.type = PatternLayout
+                    appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}:%L - %m%n
+                    
+                    rootLogger.level = OFF
+                    rootLogger.appenderRefs = console
+                    rootLogger.appenderRef.console.ref = STDOUT
+                    rootLogger.additivity = false
+                    
+                    logger.reflections.name = org.reflections
+                    logger.reflections.level = ERROR
+                    logger.reflections.additivity = false
+                    
+                    logger.jettythread.name = org.eclipse.jetty.util.thread
+                    logger.jettythread.level = FATAL
+                    
+                    logger.workertask.name = org.apache.kafka.connect.runtime.WorkerTask
+                    logger.workertask.level = OFF
+                    
+                    logger.jettythreadstrategy.name = org.eclipse.jetty.util.thread.strategy.EatWhatYouKill
+                    logger.jettythreadstrategy.level = OFF
+                    """;
+        }
 
         String externalCmName = "external-cm-hierarchy";
 
@@ -1464,13 +1886,41 @@ class LoggingChangeST extends AbstractST {
         );
 
         LOGGER.info("Changing log levels");
-        String updatedLog4jConfig =
-                "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
-                        "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
-                        "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
-                        "log4j.rootLogger=INFO, CONSOLE\n" +
-                        "log4j.logger.org.eclipse.jetty.util.thread=WARN\n" +
-                        "log4j.logger.org.reflections=ERROR";
+
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            log4jConfig = "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
+                    "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
+                    "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
+                    "log4j.rootLogger=INFO, CONSOLE\n" +
+                    "log4j.logger.org.eclipse.jetty.util.thread=WARN\n" +
+                    "log4j.logger.org.reflections=ERROR";
+        } else {
+            log4jConfig = """
+                    name = KafkaMirrorMaker2Config
+
+                    appender.console.type = Console
+                    appender.console.name = STDOUT
+                    appender.console.layout.type = PatternLayout
+                    appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}:%L - %m%n
+                    
+                    rootLogger.level = INFO
+                    rootLogger.appenderRefs = console
+                    rootLogger.appenderRef.console.ref = STDOUT
+                    rootLogger.additivity = false
+                    
+                    logger.reflections.name = org.reflections
+                    logger.reflections.level = ERROR
+                    logger.reflections.additivity = false
+                    
+                    logger.jettythread.name = org.eclipse.jetty.util.thread
+                    logger.jettythread.level = WARN
+                    
+                    # To test the hierarchy, we keep the loggers and remove the level
+                    logger.workertask.name = org.apache.kafka.connect.runtime.WorkerTask
+                    logger.jettythreadstrategy.name = org.eclipse.jetty.util.thread.strategy.EatWhatYouKill
+                    """;
+        }
 
         mm2LoggingMap = new ConfigMapBuilder()
                 .withNewMetadata()
@@ -1478,7 +1928,7 @@ class LoggingChangeST extends AbstractST {
                 .withName(externalCmName)
                 .withNamespace(testStorage.getNamespaceName())
                 .endMetadata()
-                .withData(Collections.singletonMap("log4j.properties", updatedLog4jConfig))
+                .withData(Collections.singletonMap("log4j.properties", log4jConfig))
                 .build();
 
         kubeClient().updateConfigMapInNamespace(testStorage.getNamespaceName(), mm2LoggingMap);
@@ -1512,14 +1962,48 @@ class LoggingChangeST extends AbstractST {
     )
     void testNotExistingCMSetsDefaultLogging() {
         final TestStorage testStorage = new TestStorage(ResourceManager.getTestContext());
-        final String defaultProps = ReadWriteUtils.readFile(TestUtils.USER_PATH + "/../cluster-operator/src/main/resources/default-logging/KafkaCluster.properties");
-
-        String cmData = "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
-            "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
-            "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
-            "log4j.rootLogger=INFO, CONSOLE\n" +
-            "log4j.logger.kafka=INFO\n" +
-            "log4j.logger.org.apache.kafka=INFO";
+        final String propertiesFilename;
+        final String defaultProps;
+        final String loggingConfiguration;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            defaultProps = ReadWriteUtils.readFile(TestUtils.USER_PATH + "/../cluster-operator/src/main/resources/default-logging/KafkaCluster.log4j1.properties");
+            propertiesFilename = "log4j.properties";
+            loggingConfiguration = "log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender\n" +
+                    "log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout\n" +
+                    "log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %p %m (%c) [%t]%n\n" +
+                    "log4j.rootLogger=INFO, CONSOLE\n" +
+                    "log4j.logger.kafka=INFO\n" +
+                    "log4j.logger.org.apache.kafka=INFO";
+        } else {
+            defaultProps = ReadWriteUtils.readFile(TestUtils.USER_PATH + "/../cluster-operator/src/main/resources/default-logging/KafkaCluster.properties");
+            propertiesFilename = "log4j2.properties";
+            loggingConfiguration = """
+                    name = KafkaConfig
+                    
+                    appender.console.type = Console
+                    appender.console.name = STDOUT
+                    appender.console.layout.type = PatternLayout
+                    appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c{1}:%L - %m%n
+                    
+                    rootLogger.level = INFO
+                    rootLogger.appenderRefs = console
+                    rootLogger.appenderRef.console.ref = STDOUT
+                    rootLogger.additivity = false
+                    
+                    logger.kafka.name = kafka
+                    logger.kafka.level = INFO
+                    logger.kafka.appenderRefs = console
+                    logger.kafka.appenderRef.console.ref = STDOUT
+                    logger.kafka.additivity = false
+                    
+                    logger.orgapachekafka.name = org.apache.kafka
+                    logger.orgapachekafka.level = INFO
+                    logger.orgapachekafka.appenderRefs = console
+                    logger.orgapachekafka.appenderRef.console.ref = STDOUT
+                    logger.orgapachekafka.additivity = false
+                    """;
+        }
 
         String existingCmName = "external-cm";
         String nonExistingCmName = "non-existing-cm-name";
@@ -1529,7 +2013,7 @@ class LoggingChangeST extends AbstractST {
                 .withName(existingCmName)
                 .withNamespace(testStorage.getNamespaceName())
             .endMetadata()
-            .withData(Collections.singletonMap("log4j.properties", cmData))
+            .withData(Collections.singletonMap("log4j.properties", loggingConfiguration))
             .build();
 
         kubeClient().createConfigMapInNamespace(testStorage.getNamespaceName(), configMap);
@@ -1560,8 +2044,8 @@ class LoggingChangeST extends AbstractST {
         
         String log4jFile =  cmdKubeClient().namespace(testStorage.getNamespaceName()).execInPodContainer(Level.DEBUG,
             brokerPodName,
-            "kafka", "/bin/bash", "-c", "cat custom-config/log4j.properties").out();
-        assertTrue(log4jFile.contains(cmData));
+            "kafka", "/bin/bash", "-c", "cat custom-config/" + propertiesFilename).out();
+        assertTrue(log4jFile.contains(loggingConfiguration));
 
         LOGGER.info("Changing external logging's CM to not existing one");
         KafkaResource.replaceKafkaResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), kafka -> kafka.getSpec().getKafka().setLogging(
@@ -1580,10 +2064,10 @@ class LoggingChangeST extends AbstractST {
         LOGGER.info("Checking that log4j.properties in custom-config isn't empty and configuration is default");
         log4jFile = cmdKubeClient().namespace(testStorage.getNamespaceName()).execInPodContainer(Level.DEBUG,
             brokerPodName,
-            "kafka", "/bin/bash", "-c", "cat custom-config/log4j.properties").out();
+            "kafka", "/bin/bash", "-c", "cat custom-config/" + propertiesFilename).out();
 
         assertFalse(log4jFile.isEmpty());
-        assertTrue(log4jFile.contains(cmData));
+        assertTrue(log4jFile.contains(loggingConfiguration));
         assertFalse(log4jFile.contains(defaultProps));
 
         LOGGER.info("Checking if Kafka: {} contains error about non-existing CM", testStorage.getClusterName());
@@ -1643,10 +2127,15 @@ class LoggingChangeST extends AbstractST {
         final String scraperPodName = PodUtils.getPodsByPrefixInNameWithDynamicWait(testStorage.getNamespaceName(), testStorage.getScraperName()).get(0).getMetadata().getName();
 
         LOGGER.info("Changing rootLogger level in KafkaConnector to ERROR with inline logging");
-        InlineLogging inlineError = new InlineLogging();
-        inlineError.setLoggers(Collections.singletonMap("log4j.logger." + connectorClassName, "ERROR"));
+        final InlineLogging inlineLogging;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            inlineLogging = new InlineLoggingBuilder().withLoggers(Map.of("log4j.logger." + connectorClassName, "ERROR")).build();
+        } else {
+            inlineLogging = new InlineLoggingBuilder().withLoggers(Map.of("logger.connector.name", connectorClassName, "logger.connector.level", "ERROR")).build();
+        }
 
-        KafkaConnectResource.replaceKafkaConnectResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), kc -> kc.getSpec().setLogging(inlineError));
+        KafkaConnectResource.replaceKafkaConnectResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), kc -> kc.getSpec().setLogging(inlineLogging));
 
         LOGGER.info("Waiting for Connect API loggers will contain desired settings");
         TestUtils.waitFor("Logger change", TestConstants.GLOBAL_POLL_INTERVAL, TestConstants.GLOBAL_TIMEOUT,
@@ -1669,12 +2158,15 @@ class LoggingChangeST extends AbstractST {
 
         LOGGER.info("Changing KafkaConnect's root logger to WARN, KafkaConnector: {} shouldn't inherit it", testStorage.getClusterName());
 
-        InlineLogging inlineWarn = new InlineLogging();
-        inlineWarn.setLoggers(Collections.singletonMap("connect.root.logger.level", "WARN"));
+        final InlineLogging inlineLoggingWithConnect;
+        if (TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0) {
+            // Kafka 3.9
+            inlineLoggingWithConnect = new InlineLoggingBuilder().withLoggers(Map.of("connect.root.logger.level", "WARN", "log4j.logger." + connectorClassName, "ERROR")).build();
+        } else {
+            inlineLoggingWithConnect = new InlineLoggingBuilder().withLoggers(Map.of("rootLogger.level", "WARN", "logger.connector.name", connectorClassName, "logger.connector.level", "ERROR")).build();
+        }
 
-        inlineWarn.setLoggers(Map.of("connect.root.logger.level", "WARN", "log4j.logger." + connectorClassName, "ERROR"));
-
-        KafkaConnectResource.replaceKafkaConnectResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), kc -> kc.getSpec().setLogging(inlineWarn));
+        KafkaConnectResource.replaceKafkaConnectResourceInSpecificNamespace(testStorage.getNamespaceName(), testStorage.getClusterName(), kc -> kc.getSpec().setLogging(inlineLoggingWithConnect));
 
         TestUtils.waitFor("Logger change", TestConstants.GLOBAL_POLL_INTERVAL, TestConstants.GLOBAL_TIMEOUT,
             () -> cmdKubeClient().namespace(testStorage.getNamespaceName()).execInPod(scraperPodName, "curl",
@@ -1701,6 +2193,9 @@ class LoggingChangeST extends AbstractST {
         }
     )
     void testChangingInternalToExternalLoggingTriggerRollingUpdate() {
+        // Log4j2 in Kafka 4.0 should not need reload in this case
+        Assumptions.assumeTrue(TestKafkaVersion.compareDottedVersions(Environment.ST_KAFKA_VERSION, "4.0.0") < 0);
+
         final TestStorage testStorage = new TestStorage(ResourceManager.getTestContext());
 
         // EO dynamic logging is tested in io.strimzi.systemtest.log.LoggingChangeST.testDynamicallySetEOloggingLevels
